# MusicLibrary

./: Dockerfile  README.md  pyproject.toml
musiclibrary/: app.py  config.py  json_utils.py  music_data.json  scan_music.py
musiclibrary/templates/: index.html  song.html
